--- a/microservices/jet-demo/dev.yaml
+++ b/microservices/jet-demo/dev.yaml
@@ -6,7 +6,8 @@ application:
   cluster:  dev-cluster
 
 image:
-  repository: gcr.io/google_containers/echoserver
+  #repository: gcr.io/google_containers/echoserver
+  repository: 518283773752.dkr.ecr.eu-central-1.amazonaws.com/jet-demo-frontend
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: 1.4
