--- a/microservices/jet-demo/templates/k8s-service.yaml
+++ b/microservices/jet-demo/templates/k8s-service.yaml
@@ -8,7 +8,7 @@ spec:
   selector:
     {{- include "selectorLabels" . | nindent 4 }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: 8080
+    - port: 80
+      targetPort: 80
       protocol: TCP
   type: {{ .Values.service.type }}
