--- a/microservices/jet-demo/templates/k8s-deployment.yaml
+++ b/microservices/jet-demo/templates/k8s-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: "{{- include "identifier" . }}"
-          image: nginx:latest
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - containerPort: 80
