--- a/microservices/jet-demo/templates/k8s-ingress.yaml
+++ b/microservices/jet-demo/templates/k8s-ingress.yaml
@@ -12,7 +12,7 @@ spec:
   rules:
     - http:
         paths:
-          - path: "/?(.*)"
+          - path: "/"
             pathType: Prefix
             backend:
               service:
