--- a/infrastructure/dev/k8s-cluster.yaml
+++ b/infrastructure/dev/k8s-cluster.yaml
@@ -1,4 +1,4 @@
-apiVersion: javaland.platform.api/v1alpha1
+apiVersion: javaland.cloud.platform.api/v1alpha1
 kind: XKubernetesCluster
 metadata:
   name: dev-cluster
@@ -6,13 +6,9 @@ spec:
   id: dev-cluster
   stage: dev
   parameters:
-    version: '1.25'
+    nodeSize: small
+    minNodeCount: 2
     region: eu-west-1
-    staticNodeGroup:
-      nodeSize: small 
-      nodeCount: 2
-    remoteAccess:
-      controllerSecurityGroup: sg-0c0257115acef4fac
   compositionSelector:
     matchLabels:
       provider: aws
