changed node size

--- a/infrastructure/dev/k8s-cluster.yaml
+++ b/infrastructure/dev/k8s-cluster.yaml
@@ -6,7 +6,7 @@ spec:
   id: dev-cluster
   stage: dev
   parameters:
-    nodeSize: small
+    nodeSize: medium
     minNodeCount: 2
     region: eu-west-1
   compositionSelector:
