--- a/microservices/jet-demo/dev.yaml
+++ b/microservices/jet-demo/dev.yaml
@@ -1,15 +1,22 @@
 application:
-  name:     jet-demo
-  stage:    dev
-  region: eu-central-1
+  name:   javaland-demo
+  stage:  dev
+  region: eu-west-1
+  account: '518283773752'
   replicas: 1
-  cluster:  dev-cluster
+  cluster: dev-cluster
 
 image:
-  repository: 518283773752.dkr.ecr.eu-central-1.amazonaws.com/jet-demo-frontend
+  repository: 518283773752.dkr.ecr.eu-west-1.amazonaws.com/aws-community-day-dach-2022
   pullPolicy: Always
-  tag: 0.5.0
+  tag: 0.0.1
 
 service:
   type: NodePort
   port: 80
+
+autoscaling:
+  enabled: false
+
+irsa:
+  enable: true
