--- a/microservices/jet-demo/templates/k8s-deployment.yaml
+++ b/microservices/jet-demo/templates/k8s-deployment.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -6,6 +5,8 @@ metadata:
   namespace: {{ .Values.application.stage }}
   labels:
     {{- include "labels" . | nindent 4 }}
+  annotations:
+    argocd.argoproj.io/sync-wave: "2"
 spec:
   replicas: {{ .Values.application.replicas }}
   template:
@@ -14,12 +15,16 @@ spec:
       labels:
         {{- include "labels" . | nindent 8 }}
     spec:
+      serviceAccountName: "{{- include "identifier" . }}-sa"
       containers:
         - name: "{{- include "identifier" . }}"
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - containerPort: 80
+          envFrom:
+            - configMapRef:
+                name: "{{- include "identifier" . }}-configmap"
           
       restartPolicy: Always
   selector:
