--- a/microservices/jet-demo/templates/k8s-ingress.yaml
+++ b/microservices/jet-demo/templates/k8s-ingress.yaml
@@ -3,6 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: "{{- include "identifier" . }}-ingress"
+  namespace: {{ .Values.application.stage }}
   annotations:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/group.name: services
