--- a/microservices/jet-demo/templates/k8s-serviceaccount.yaml
+++ b/microservices/jet-demo/templates/k8s-serviceaccount.yaml
@@ -5,5 +5,5 @@ metadata:
   name: "{{- include "identifier" . }}-sa"
   namespace: {{ .Values.application.stage }}
   annotations:
-    eks.amazonaws.com/role-arn: arn:aws:iam::{{ .Values.application.account }}:role/eks-irsa-{{- include "identifier" . }}-sa
+    eks.amazonaws.com/role-arn: arn:aws:iam::{{ .Values.application.account }}:role/eks-irsa-{{- include "identifier" . }}-role
 automountServiceAccountToken: false
