--- a/microservices/jet-demo/templates/aws-apigateway.yaml
+++ b/microservices/jet-demo/templates/aws-apigateway.yaml
@@ -1,22 +1,21 @@
-# ---
-# apiVersion: aws.community.day.dach/v1alpha1
-# kind: XApiGateway
-# metadata:
-#   name: "{{- include "identifier" . }}"
-#   annotations:
-#     argocd.argoproj.io/sync-wave: "3"
-# spec:
-#   service:
-#     name:  {{ .Values.application.name }}
-#     stage: {{ .Values.application.stage }}
-#   compositionSelector:
-#     matchLabels:
-#       provider: aws
-#       platform: xTrinity
-#   parameters:
-#     protocol: HTTP
-#     region: {{ .Values.application.region }}
-#     autoDeploy: true
-#     domainName: ntt-tech-demo.com
-#     albName: "{{ .Values.application.cluster }}-services"
-#     clusterName: {{ .Values.application.cluster }}
+---
+apiVersion: javaland.cloud.platform.api/v1alpha1
+kind: XApiGateway
+metadata:
+  name: "{{- include "identifier" . }}"
+  annotations:
+    argocd.argoproj.io/sync-wave: "3"
+spec:
+  service:
+    name:  {{ .Values.application.name }}
+    stage: {{ .Values.application.stage }}
+  parameters:
+    protocol: HTTP
+    region: {{ .Values.application.region }}
+    autoDeploy: true
+    domainName: ntt-tech-demo.com
+    # albName: "{{ .Values.application.cluster }}-services"
+    # clusterName: {{ .Values.application.cluster }}
+  compositionSelector:
+    matchLabels:
+      provider: aws
