--- a/microservices/jet-demo/templates/aws-apigateway.yaml
+++ b/microservices/jet-demo/templates/aws-apigateway.yaml
@@ -12,4 +12,4 @@ spec:
   parameters:
     region: {{ .Values.application.region }}
     protocol: HTTP
-    domainName: javaland.ntt-tech-demo.com
+    domainName: {{ .Values.application.domain }}
