--- a/microservices/jet-demo/dev.yaml
+++ b/microservices/jet-demo/dev.yaml
@@ -7,9 +7,9 @@ application:
   replicas: 1
 
 image:
-  repository: 518283773752.dkr.ecr.eu-west-1.amazonaws.com/javaland
+  repository: 518283773752.dkr.ecr.eu-west-1.amazonaws.com/aws-community-day-dach-2022
   pullPolicy: Always
-  tag: latest
+  tag: 0.0.1
 
 service:
   type: NodePort
