--- a/microservices/javaland-demo/templates/k8s-configmap.yaml
+++ b/microservices/javaland-demo/templates/k8s-configmap.yaml
@@ -6,3 +6,4 @@ metadata:
   namespace: {{ .Values.application.stage }}
 data:
   AWS_REGION: {{ .Values.application.region }}
+  DYNAMODB_TABLE_NAME:  {{ .Values.database.tableName }}
