--- a/microservices/javaland-demo/templates/k8s-serviceaccount.yaml
+++ b/microservices/javaland-demo/templates/k8s-serviceaccount.yaml
@@ -5,5 +5,5 @@ metadata:
   name: "{{- include "identifier" . }}-sa"
   namespace: {{ .Values.application.stage }}
   annotations:
-    eks.amazonaws.com/role-arn: arn:aws:iam::{{ .Values.irsa.account }}:role/eks-irsa-{{- include "identifier" . }}-role
+    eks.amazonaws.com/role-arn: arn:aws:iam::518283773752:role/{{ .Values.application.name }}-iam-role-nosql-database
 automountServiceAccountToken: false
