--- a/microservices/javaland-demo/templates/aws-apigateway.yaml
+++ b/microservices/javaland-demo/templates/aws-apigateway.yaml
@@ -3,6 +3,8 @@ apiVersion: we.are.developers.demo/v1alpha1
 kind: XAPIGateway
 metadata:
   name: "{{- include "identifier" . }}-apigateway"
+  annotations:
+    argocd.argoproj.io/sync-wave: "3"
 spec:
   service:
     name: {{ .Values.application.name }}
